@@ -1,0 +1,28 @@
+from zope.interface import implements
+
+from zope import schema
+from zope.schema.interfaces import IFromUnicode
+from zope.configuration.fields import Tokens
+
+class TupleTokens(schema.Tuple):
+
+    implements(IFromUnicode)
+
+    def fromUnicode(self, u):
+        u = u.strip()
+        if u:
+            vt = self.value_type.bind(self.context)
+            values = []
+            for s in u.split():
+                try:
+                    v = vt.fromUnicode(s)
+                except schema.ValidationError, v:
+                    raise InvalidToken("%s in %s" % (v, u))
+                else:
+                    values.append(v)
+            values = tuple(values)
+        else:
+            values = ()
+        self.validate(values)
+        return values
+    
